k8s/ingress.yaml
#NEW VERSION, SIMPLE
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: voting-app-ingress
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - path: /vote(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: vote-service
                port:
                  number: 80
          - path: /result(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: result-service
                port:
                  number: 80
